cicd/argocd/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-sample
spec:
  selector:
    app: springboot-sample
  ports:
    - name: app-port
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
