cicd/argocd/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-sample
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
  - host: springboot-sample.example.com
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: springboot-sample
            port:
              number: 8080
